tSQLt needs to build in its own db

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,7 +68,7 @@ build_script:
     
     SET SCRIPT=%CLONE_FOLDER%%TSQLTBUILD%
     
-    sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d master -b
+    sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
     
     SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT%
     
