--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,8 @@ environment:
     MSSQL_PASS: Password12!
     
     #Test Files
-    CREATESCRIPT: sp_SizeOptiMiser.sql
+    CREATESCRIPT1: sp_sizeoptimiser.sql
+	CREATESCRIPT2: sp_helpme.sql
     TSQLTSETCLR:  tests\tSQLt\SetClrEnabled.sql
     TSQLTCREATEDB: tests\tSQLt\CreateDatabase.sql
     TSQLTINSTALL: tests\tSQLt\tSQLt.class.sql
@@ -66,22 +67,26 @@ build_script:
     
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
     
-    SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT%
+    SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT1%
+    
+    sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
+
+	SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT2%
     
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
     
     SET SCRIPT=%CLONE_FOLDER%%TSQLTBUILD%
     
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
-    
+
 
 test_script:
 - echo Running unit tests
 - cmd: >-
 
     SET SCRIPT=%CLONE_FOLDER%%TSQLTTEST%
-    
+
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
-    
+
 
 deploy: off
