--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ environment:
     #Test Files
     CREATESCRIPT1: sp_sizeoptimiser.sql
     CREATESCRIPT2: sp_helpme.sql
+    CREATESCRIPT3: sp_doc.sql
     TSQLTSETCLR:  tests\tSQLt\SetClrEnabled.sql
     TSQLTCREATEDB: tests\tSQLt\CreateDatabase.sql
     TSQLTINSTALL: tests\tSQLt\tSQLt.class.sql
@@ -72,6 +73,10 @@ build_script:
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
 
     SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT2%
+
+    sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
+    
+    SET SCRIPT=%CLONE_FOLDER%%CREATESCRIPT3%
 
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
 
