--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,7 +77,7 @@ build_script:
     foreach ($filename in get-childitem -path $env:clone_folder -filter "*.sql")
     {
     invoke-sqlcmd –ServerInstance $env:DB_INSTANCE -Database $env:TARGET_DB -InputFile $filename.fullname -Username $env:MSSQL_LOGIN -Password $env:MSSQL_PASS
-    $filename 
+    Write-Output "Installing " + $filename
     }
 
 - echo Building tSQLt Tests
