--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 0.0.{build}
 
 pull_requests:
-  do_not_increment_build_number: true
+  do_not_increment_build_number: false
   
 max_jobs: 1
 
