--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,14 +17,11 @@ environment:
       secure: 1As21MwWY8xpdHMx49QbaNn/O5Y8tk3ddf2w4u259Ryu7CRCGwb9Zq0+bimTQhB7
     
     #Test Files
-    CREATESCRIPT1: sp_sizeoptimiser.sql
-    CREATESCRIPT2: sp_helpme.sql
-    CREATESCRIPT3: sp_doc.sql
     TSQLTSETCLR:  tests\tSQLt\SetClrEnabled.sql
     TSQLTCREATEDB: tests\tSQLt\CreateDatabase.sql
     TSQLTINSTALL: tests\tSQLt\tSQLt.class.sql
     TSQLTBUILDPATH: tests\build
-    TSQLTTEST: tests\run\run_tests.sql
+    TSQLTTESTPATH: tests\run
     COMBINED_FILE: install_expsql.sql
     
     #Build Constants
@@ -73,13 +70,13 @@ install:
     
     sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b
 
+build_script:
 - echo Installing ExpressSQL Scripts
 - ps: >-
     ForEach ($filename in Get-Childitem -Path $env:CLONE_FOLDER -Filter "*.sql") {
         Invoke-SqlCmd –ServerInstance $env:DB_INSTANCE -Database $env:TARGET_DB -InputFile $filename.fullname -Username $env:MSSQL_LOGIN -Password $env:MSSQL_PASS
     }
 
-build_script:
 - echo Building tSQLt Tests
 - ps: >-
     ForEach ($filename in Get-Childitem -Path $env:TSQLTBUILDPATH -Filter "*.sql") {
@@ -88,28 +85,18 @@ build_script:
 
 test_script:
 - echo Running unit tests
-- cmd: >-
-    SET SCRIPT=%CLONE_FOLDER%%TSQLTTEST%
-
-    sqlcmd -S %DB_INSTANCE% -U %MSSQL_LOGIN% -P %MSSQL_PASS% -i %SCRIPT% -d %TARGET_DB% -b -r 1 > NUL
+- ps: >-
+    ForEach ($filename in Get-Childitem -Path $env:TSQLTTESTPATH -Filter "*.sql") {
+        Invoke-SqlCmd –ServerInstance $env:DB_INSTANCE -Database $env:TARGET_DB -InputFile $filename.fullname -Username $env:MSSQL_LOGIN -Password $env:MSSQL_PASS
+    }
 
 on_success:
-- echo Push unified script to branch
-- ps: >-
-    git config --global credential.helper store
-    
-    Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
-
-    Get-Item *.sql | Get-Content | Out-File %COMBINED_FILE%
-
-    git config --global user.email "appveyor@expressdb.io" 
-    
-    git config --global user.name "appveyor"
-    
-    git add .
-
-    git commit -a -m "Generate combined installer script" -q
-    
-    git push origin -f
-
-
+  - git config --global credential.helper store
+  - ps: Add-Content "$HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
+  - git config --global user.email "appveyor@expressdb.io" 
+  - git config --global user.name "appveyor"
+  - git checkout -b %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
+  - Get-Item *.sql | Get-Content | Out-File %COMBINED_FILE%
+  - git add .
+  - git commit -a -m "Generate combined installer script" -q
+  - git push origin -f
