--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,3 +94,27 @@ on_success:
   - git add .
   - git commit -a -m "Generate combined installer script" -q
   - git push --set-upstream origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
+
+
+    - ps: >-
+        git config --global credential.helper store
+        
+        Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+        
+    - cmd: >-
+
+        git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/expresssql.git
+      
+    - ps: Get-Item *.sql | Get-Content | Out-File $env:COMBINED_FILE
+
+    - cmd: >-
+
+        git config --global user.email "john@lowlydba.com" 
+        
+        git config --global user.name "John M"
+        
+        git add .
+        
+        git commit -a -m "Add unified" -q
+        
+        git push origin gh-pages -f
