--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,6 +89,8 @@ on_success:
       git config --global credential.helper store
       
       Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+
+      Get-Item *.sql | Get-Content | Out-File $env:COMBINED_FILE
       
   - cmd: >-
       
@@ -102,6 +104,6 @@ on_success:
       
       git add .
       
-      git commit -a -m "deploy" -q
+      git commit -a -m "Add combined install script" -q
       
       git push origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
