--- a/appveyor.yml
+++ b/appveyor.yml
@@ -85,17 +85,12 @@ test_script:
     }
 
 on_success:
-  - ps: >-
-      git config --global credential.helper store
-      
-      Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
-
-      Get-Item *.sql | Get-Content | Out-File C:\xxxx\$env:COMBINED_FILE
-
-  - git clone -q --branch=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% https://github.com/LowlyDBA/expresssql.git C:\xxxx
-  - cd C:\xxxx
+  - git checkout -b %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
+  - git config --global credential.helper store
+  - ps: Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+  - ps: Get-Item *.sql | Get-Content | Out-File $env:COMBINED_FILE
   - git config --global user.email "john@lowlydba.com" 
   - git config --global user.name "John M"
   - git add .
   - git commit -a -m "Add combined install script" -q
-  - git push origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -f
+  - git push --set-upstream origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
