--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,7 +87,7 @@ test_script:
 on_success:
   - git checkout -b %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
   - git config --global credential.helper store
-  - ps: Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+  - ps: Add-Content "$HOME\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
   - ps: Get-Item *.sql | Get-Content | Out-File $env:COMBINED_FILE
   - git config --global user.email "john@lowlydba.com" 
   - git config --global user.name "John M"
