--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -50,7 +50,7 @@ environment:
 install:
 - ps: Install-Module SqlServer -Force -AllowClobber
 - ps: Install-Product node $env:nodejs_version
-- ps: npm install tsqllint -g | Out-Null
+- npm install tsqllint -g
 
 - echo Starting SQL Server
 - ps: >-
