--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -25,27 +25,27 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       MSSQL: SQL2019
       DB_INSTANCE: (local)\SQL2019
-      LINT_CONFIG: appveyor\.tsqllintrc_150
+      LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_150
       
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       MSSQL: SQL2017
       DB_INSTANCE: (local)\SQL2017
-      LINT_CONFIG: appveyor\.tsqllintrc_140
+      LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_140
       
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       MSSQL: SQL2016
       DB_INSTANCE: (local)\SQL2016
-      LINT_CONFIG: appveyor\.tsqllintrc_130
+      LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_130
       
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       MSSQL: SQL2014
       DB_INSTANCE: (local)\SQL2014
-      LINT_CONFIG: appveyor\.tsqllintrc_120
+      LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_120
       
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       MSSQL: SQL2012SP1
       DB_INSTANCE: (local)\SQL2012SP1
-      LINT_CONFIG: appveyor/.tsqllintrc_110
+      LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
 
 install:
 - ps: Install-Module SqlServer -Force -AllowClobber
