--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -62,5 +62,7 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
-- git remote add express https://%ACCESS_TOKEN%@github.com/ExpressSQL.git
-- git push --set-upstream express %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
+- git config --global user.email "appveyor@lowlydba.com"
+- git config --global user.name "Appveyor"
+- git remote set-url origin https://%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
+- git push --set-upstream origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
