--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -63,5 +63,7 @@ test_script:
 on_success:
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
+- git add .
+- git commit -a -m "CI produced files" -q
 - git remote set-url origin https://%ACCESS_TOKEN%@github.com/LowlyDBA/%APPVEYOR_PULL_REQUEST_HEAD_REPO_NAME%.git
-- git push https://%ACCESS_TOKEN%@github.com/LowlyDBA/%APPVEYOR_PULL_REQUEST_HEAD_REPO_NAME%.git
+- git push --set-upstream origin %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
