--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -44,7 +44,7 @@ environment:
       LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
 
 install:
-- git remote set-url origin https://%ACCESS_TOKEN%@github.com/%APPVEYOR_PULL_REQUEST_HEAD_REPO_NAME%.git
+- git remote set-url origin https://%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
 - git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -q
 
 - ps: Install-Module SqlServer -Force -AllowClobber
