--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -63,7 +63,7 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
-- git remote add express https://%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
+- git remote add express https://appveyor:%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
 - git add .
