--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -63,9 +63,11 @@ test_script:
 - npx tsqllint -c %LINT_CONFIG% *.sql
 
 on_success:
-- git remote add express https://appveyor:%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
+- git config --global credential.helper store
+- ps: Add-Content -Path "$HOME\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewline
 - git config --global user.email "appveyor@lowlydba.com"
 - git config --global user.name "Appveyor"
+- git remote add express https://%ACCESS_TOKEN%@github.com/LowlyDBA/ExpressSQL.git
 - git add .
 - git commit -a -m "CI produced files"
 - git push --set-upstream express %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
