--- a/appveyor/appveyor.yml
+++ b/appveyor/appveyor.yml
@@ -43,7 +43,7 @@ environment:
       DB_INSTANCE: (local)\SQL2012SP1
       LINT_CONFIG: appveyor\tsqllint\.tsqllintrc_110
 
-clone_script:
+before_install:
   - git checkout %APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH% -q
   - git config --global credential.helper store
   - ps: Add-Content -Path "$env:USERPROFILE\.git-credentials" -Value "https://$($env:access_token):x-oauth-basic@github.com`n" -NoNewLine
